--- a/Source/WTF/ChangeLog
+++ b/Source/WTF/ChangeLog
@@ -1,3 +1,14 @@
+2019-03-21  Dominik Infuehr  <dinfuehr@igalia.com>
+
+        Support more paren expressions in RegExp-JIT on ARM/MIPS
+        https://bugs.webkit.org/show_bug.cgi?id=196080
+
+        Reviewed by NOBODY (OOPS!).
+
+        Enable jitting of more paren expression on ARM/MIPS.
+
+        * wtf/Platform.h:
+
 2019-03-20  Simon Fraser  <simon.fraser@apple.com>
 
         Rename ENABLE_ACCELERATED_OVERFLOW_SCROLLING macro to ENABLE_OVERFLOW_SCROLLING_TOUCH
