--- a/Source/WTF/ChangeLog
+++ b/Source/WTF/ChangeLog
@@ -1,3 +1,15 @@
+2019-03-28  Dominik Infuehr  <dinfuehr@igalia.com>
+
+        Support more RegExps in JIT on ARM/MIPS
+        https://bugs.webkit.org/show_bug.cgi?id=196080
+
+        Reviewed by NOBODY (OOPS!).
+
+        Enable jitting of more paren expression and backreferences
+        on ARM/MIPS.
+
+        * wtf/Platform.h:
+
 2019-03-28  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         Unreviewed build fix.
