--- a/Source/WTF/ChangeLog
+++ b/Source/WTF/ChangeLog
@@ -1,3 +1,15 @@
+2019-04-01  Dominik Infuehr  <dinfuehr@igalia.com>
+
+        [YARR] Improved JIT support on ARM/MIPS
+        https://bugs.webkit.org/show_bug.cgi?id=196080
+
+        Reviewed by NOBODY (OOPS!).
+
+        Enable jitting of more paren expressions and backreferences
+        on ARM/MIPS.
+
+        * wtf/Platform.h:
+
 2019-03-31  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] Butterfly allocation from LargeAllocation should try "realloc" behavior if collector thread is not active
